# thepipelinetool

./: .crates.toml  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ci.yaml  docker-compose.yml  executor.Dockerfile  server.Dockerfile  worker.Dockerfile  worker_dind.Dockerfile
.github/: dependabot.yml
.github/workflows/: build-dev.yml  build-examples.yml  build.yml  build_ui.yml  ci.yml  examples.yml  release.yml
core/: Cargo.toml
core/examples/: branch.rs  direct.rs  simple.rs
core/src/: cli.rs  lib.rs
docker/: executor.Dockerfile  executor_slim.Dockerfile  server.Dockerfile  worker.Dockerfile  worker_slim.Dockerfile
examples/: Cargo.toml
examples/examples/: branch.rs  chain.rs  circular.rs  direct.rs  dynamic.rs  fail_circular.rs  fail_hello_world.rs  fail_retry_delay.rs  fail_simple.rs  fail_timeout.rs  hello_world.rs  iris.rs  manual_dependencies.rs  massive.rs  params_simple.rs  params_simple_trigger.rs  schedule.rs  schedule_frequent.rs  simple.rs  simple_circular.rs  simple_command.rs  simple_log.rs  simple_serialize.rs  single_done.rs
examples/examples/yaml/: circular.yaml  expand_lazy.yaml  fail_circular.yaml  params.yaml  params_simple.yaml  python.yaml  run_id.yaml  simple.yaml  simple_circular.yaml
graph/: Cargo.toml
graph/src/: dag.rs  lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
runner/: Cargo.toml
runner/src/: blanket.rs  in_memory.rs  in_memory_parallel.rs  lib.rs  local.rs
scripts/: build_examples.sh  publish.sh  refresh_cache.sh  run.sh  run_all_examples.sh  run_dev.sh  run_local_server_dev.sh  run_local_server_release.sh  run_local_worker.sh  run_local_worker_release.sh  run_release.sh
task/: Cargo.toml
task/src/: branch.rs  lib.rs  queued_task.rs  task.rs  task_options.rs  task_ref.rs  task_ref_inner.rs  task_result.rs  task_status.rs
thepipelinetool/: Cargo.toml  README.md
thepipelinetool/examples/: branch.rs  chain.rs  chain_mermaid.rs  circular.rs  direct.rs  dynamic.rs  hello_world.rs  iris.rs  macro.rs  manual_dependencies.rs  massive.rs  retry_delay.rs  schedule.rs  schedule_frequent.rs  simple.rs  simple.yaml  simple_builder.rs  simple_circular.rs  simple_command.rs  simple_log.rs  simple_serialize.rs  test.rs  timeout.rs
thepipelinetool/examples/yaml/: circular.yaml  simple.yaml
thepipelinetool/scripts/: build_examples.sh
thepipelinetool/src/: binary.rs  builder.rs  check_for_cycles.rs  circular_dependencies.rs  cli.rs  commands.rs  dag.rs  display_hash.rs  display_tree.rs  executable.rs  flow.rs  functions.rs  graph.rs  hash.rs  in_memory_runner.rs  lib.rs  operators.rs  ops_overrides.rs  options.rs  read_from_executable.rs  read_from_yaml.rs  source_type.rs  statics.rs  template.rs  templating.rs  tree.rs  yaml.rs
thepipelinetool_cli/: Cargo.toml
thepipelinetool_cli/src/: binary.rs  circular_dependencies.rs  commands.rs  graph.rs  hash.rs  lib.rs  tree.rs  yaml.rs
thepipelinetool_core/: Cargo.toml  README.md
thepipelinetool_core/src/: check_for_cycles.rs  cli.rs  flow.rs  functions.rs  graph.rs  helpers.rs  lib.rs  ops.rs  statics.rs
thepipelinetool_operators/: Cargo.toml
thepipelinetool_operators/examples/: expand_lazy.yaml  run_id.yaml  simple.yaml
thepipelinetool_operators/src/: assert.rs  bash.rs  lib.rs  papermill.rs  params.rs  print.rs  python.rs
thepipelinetool_proc_macro/: Cargo.toml
thepipelinetool_proc_macro/src/: lib.rs
thepipelinetool_reader/: Cargo.toml
thepipelinetool_reader/src/: yaml.rs
thepipelinetool_runner/: Cargo.toml
thepipelinetool_runner/src/: backend.rs  blanket.rs  blanket_backend.rs  in_memory.rs  in_memory_backend.rs  in_memory_runner.rs  lib.rs  options.rs  pipeline.rs  pipeline_options.rs  run.rs
thepipelinetool_server/: Cargo.toml
thepipelinetool_server/src/: catchup.rs  check_timeout.rs  env.rs  lib.rs  local_runner.rs  redis.rs  redis_backend.rs  redis_runner.rs  routes.rs  scheduler.rs  statics.rs
thepipelinetool_task/: Cargo.toml
thepipelinetool_task/src/: branch.rs  lib.rs  ordered_queued_task.rs  queued_task.rs  task_options.rs  task_ref_inner.rs  task_result.rs  task_status.rs  temp_queued_task.rs  trigger_rule.rs  trigger_rules.rs
thepipelinetool_ui/: README.md  analysis_options.yaml  pubspec.yaml
thepipelinetool_ui/.devcontainer/: Dockerfile
thepipelinetool_ui/lib/: main.dart
thepipelinetool_ui/lib/classes/: colors.dart  dag_info.dart  dag_options.dart  selected_task.dart  task_status.dart
thepipelinetool_ui/lib/providers/: dags.dart  darkmode.dart  http_client.dart  task_status.dart  tooltip.dart
thepipelinetool_ui/lib/providers/drawer/: selected_task.dart  task_info.dart  task_results.dart
thepipelinetool_ui/lib/providers/graph_view/: runs.dart
thepipelinetool_ui/lib/providers/task_view/: task_grid.dart
thepipelinetool_ui/lib/views/task_view/: http_client_provider.dart
thepipelinetool_ui/lib/widgets/: appbar.dart  homescreen.dart
thepipelinetool_ui/lib/widgets/dag_page/: dag_page.dart
thepipelinetool_ui/lib/widgets/dag_page/graph_view/: graph_view.dart  node_card.dart
thepipelinetool_ui/lib/widgets/dag_page/task_view/: table_cell.dart  task_view.dart
thepipelinetool_ui/lib/widgets/drawer/: attempts.dart  drawer.dart  status.dart
thepipelinetool_ui/linux/: CMakeLists.txt  my_application.cc
thepipelinetool_ui/macos/Runner.xcodeproj/: project.pbxproj
thepipelinetool_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
thepipelinetool_ui/macos/Runner/Configs/: AppInfo.xcconfig
thepipelinetool_ui/test/: widget_test.dart
thepipelinetool_ui/web/: index.html
thepipelinetool_ui/windows/: CMakeLists.txt
thepipelinetool_ui/windows/runner/: Runner.rc  main.cpp
thepipelinetool_utils/: Cargo.toml
thepipelinetool_utils/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
