[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
members = [
    "thepipelinetool",
    "thepipelinetool_runner",
    "thepipelinetool_utils",
    "thepipelinetool_task",
    "thepipelinetool_proc_macro",
]
resolver = "2"

[workspace.thepipelinetool]
readme = "README.md"