[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task = { path = "../task" }
utils = { path = "../utils" }
serde_json = "1.0"
serde = "1.0.189"
chrono = { version = "0.4.31", features = [ "serde" ] }

