[package]
name = "thepipelinetool"
version = "0.1.1"
edition = "2021"
description = "an *experimental* pipeline orchestration tool drawing on concepts from Apache Airflow"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = [ "serde" ] }
serde_json = "1.0"
thepipelinetool_task = { path = "../thepipelinetool_task", version = "0.1.0" }
thepipelinetool_utils = { path = "../thepipelinetool_utils", version = "0.1.0" }
thepipelinetool_runner = { path = "../thepipelinetool_runner", version = "0.1.0" }
thepipelinetool_proc_macro = { path = "../thepipelinetool_proc_macro", version = "0.1.0" }
serde = "1.0.189"
clap = { version = "4.4.7", features = [ "cargo" ] }
saffron = { git = "https://github.com/cloudflare/saffron.git", version = "0.1.0" }
parking_lot = "0.12.1"

[dev-dependencies]
rand = "0.8"