[package]
name = "thepipelinetool"
version = "0.2.4"
edition = "2021"
description = "readers used for thepipelinetool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thepipelinetool_core = { path = "../thepipelinetool_core", version = "0.2.4" }
thepipelinetool_runner = { path = "../thepipelinetool_runner", version = "0.2.4" }
thepipelinetool_utils = { path = "../thepipelinetool_utils", version = "0.2.4" }

chrono = { version = "0.4.31", features = [ "serde" ] }
clap = { version = "4.4.7", features = [ "cargo" ] }
kdam = "0.5.1"
anyhow = "1.0.81"
reqwest = { version = "0.12.3", features = [ "json", "blocking" ] }

serde_json = "1.0"
serde = "1.0.189"
serde_yaml = "0.9"

[[bin]]
name = "tpt"
path = "bin/tpt.rs"
