[package]
name = "thepipelinetool_operators"
version = "0.1.2"
edition = "2021"
description = "operators used for thepipelinetool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thepipelinetool_utils = { path = "../thepipelinetool_utils", version = "0.1.2" }

chrono = { version = "0.4.31", features = [ "serde" ] }
clap = { version = "4.4.7", features = [ "cargo" ] }

serde_json = "1.0"
serde = "1.0.189"
serde_yaml = "0.9"
