[package]
name = "thepipelinetool_proc_macro"
version = "0.1.0"
edition = "2021"
description = "macros used for thepipelinetool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

