[package]
name = "thepipelinetool_reader"
version = "0.1.2"
edition = "2021"
description = "readers used for thepipelinetool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thepipelinetool_task = { path = "../thepipelinetool_task", version = "0.1.11" }
thepipelinetool_utils = { path = "../thepipelinetool_utils", version = "0.1.2" }
serde_json = "1.0"
serde = "1.0.189"
serde_yaml = "0.9"
