[package]
name = "thepipelinetool_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chrono = "0.4.31"
thepipelinetool_utils = { path = "../thepipelinetool_utils", version = "0.1.0" }
serde = { version = "1.0.189", features = ["derive"] }