[package]
name = "thepipelinetool_utils"
version = "0.2.1"
edition = "2021"
description = "utils used for thepipelinetool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.189"
